--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -44,5 +44,15 @@
             <TextBox Grid.Column="1" x:Name="TimeTextBox"/>
         </Grid>
 
+        <Button Grid.Row="3" Content="Verificar" Width="100" HorizontalAlignment="Center" Margin="0 10 0 10"/>
+        
+        <TextBlock Grid.Row="4"
+           x:Name="ResultTextBlock"
+           FontSize="14"
+           FontWeight="Bold"
+           Text="Resultado aquí..."
+           HorizontalAlignment="Center"
+           Margin="0 10 0 0"/>
+
     </Grid>
 </Window>
