--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -13,6 +13,9 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
        
@@ -24,8 +27,10 @@
             <Label Grid.Column="0" Content="Placa:"/>
             <TextBox Grid.Column="1" x:Name="LicensePlateTextBox"/>
         </Grid>
-
-        <Grid Grid.Row="1" Margin="0 0 0 10">
+        
+        <TextBlock Grid.Row="1" x:Name="LicensePlateError" Foreground="Red" FontSize="12"/>
+        
+        <Grid Grid.Row="2" Margin="0 0 0 10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="*"/>
@@ -34,8 +39,10 @@
             <DatePicker Grid.Column="1" x:Name="DatePicker"/>
         </Grid>
 
-        
-        <Grid Grid.Row="2" Margin="0 0 0 10">
+        <TextBlock Grid.Row="3" x:Name="DateError" Foreground="Red" FontSize="12"/>
+
+
+        <Grid Grid.Row="4" Margin="0 0 0 10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="*"/>
@@ -44,14 +51,16 @@
             <TextBox Grid.Column="1" x:Name="TimeTextBox"/>
         </Grid>
 
-        <Button Grid.Row="3" 
+        <TextBlock Grid.Row="5" x:Name="TimeError" Foreground="Red" FontSize="12"/>
+
+        <Button Grid.Row="6" 
                 Content="Verificar" 
                 Width="100" 
                 HorizontalAlignment="Center" 
                 Margin="0 10 0 10"
                 Click="VerifyButton_Click"/>
         
-        <TextBlock Grid.Row="4"
+        <TextBlock Grid.Row="7"
            x:Name="ResultTextBlock"
            FontSize="14"
            FontWeight="Bold"
