--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -25,7 +25,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Placa:"/>
-            <TextBox Grid.Column="1" x:Name="LicensePlateTextBox"/>
+            <TextBox Grid.Column="1" x:Name="LicensePlateTextBox" TextChanged="LicensePlateTextBox_TextChanged"/>
         </Grid>
         
         <TextBlock Grid.Row="1" x:Name="LicensePlateError" Foreground="Red" FontSize="12"/>
