--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -48,7 +48,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Label Grid.Column="0" Content="Hora:"/>
-            <TextBox Grid.Column="1" x:Name="TimeTextBox"/>
+            <TextBox Grid.Column="1" x:Name="TimeTextBox" TextChanged="TimeTextBox_TextChanged"/>
         </Grid>
 
         <TextBlock Grid.Row="5" x:Name="TimeError" Foreground="Red" FontSize="12"/>
