--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -53,18 +53,16 @@
 
         <TextBlock Grid.Row="5" x:Name="TimeError" Foreground="Red" FontSize="12"/>
 
-        <Button Grid.Row="6" 
-                Content="Verificar" 
-                Width="100" 
-                HorizontalAlignment="Center" 
-                Margin="0 10 0 10"
-                Click="VerifyButton_Click"/>
-        
+        <StackPanel Grid.Row="6" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
+            <Button Content="Verificar" Width="100" Click="VerifyButton_Click" />
+            <Button Content="Limpiar" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
+        </StackPanel>
+
         <TextBlock Grid.Row="7"
            x:Name="ResultTextBlock"
            FontSize="14"
            FontWeight="Bold"
-           Text="Resultado aquí..."
+           Text="Pico y Placa Predictor"
            HorizontalAlignment="Center"
            Margin="0 10 0 0"/>
 
