--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -24,7 +24,7 @@
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Placa:"/>
+            <Label Grid.Column="0" Content="License Plate:"/>
             <TextBox Grid.Column="1" x:Name="LicensePlateTextBox" TextChanged="LicensePlateTextBox_TextChanged"/>
         </Grid>
         
@@ -35,8 +35,8 @@
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Fecha:"/>
-            <DatePicker Grid.Column="1" x:Name="DatePicker"/>
+            <Label Grid.Column="0" Content="Date:"/>
+            <DatePicker Grid.Column="1" x:Name="DatePicker" />
         </Grid>
 
         <TextBlock Grid.Row="3" x:Name="DateError" Foreground="Red" FontSize="12"/>
@@ -47,22 +47,22 @@
                 <ColumnDefinition Width="80"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Hora:"/>
+            <Label Grid.Column="0" Content="Time:"/>
             <TextBox Grid.Column="1" x:Name="TimeTextBox" TextChanged="TimeTextBox_TextChanged"/>
         </Grid>
 
         <TextBlock Grid.Row="5" x:Name="TimeError" Foreground="Red" FontSize="12"/>
 
         <StackPanel Grid.Row="6" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
-            <Button Content="Verificar" Width="100" Click="VerifyButton_Click" />
-            <Button Content="Limpiar" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
+            <Button Content="Verify" Width="100" Click="VerifyButton_Click" />
+            <Button Content="Clear" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
         </StackPanel>
 
         <TextBlock Grid.Row="7"
            x:Name="ResultTextBlock"
            FontSize="14"
            FontWeight="Bold"
-           Text="Pico y Placa Predictor"
+           Text=""
            HorizontalAlignment="Center"
            Margin="0 10 0 0"/>
 
