--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -5,66 +5,129 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PicoYPlacaPredictor"
         mc:Ignorable="d"
-        Title="Pico y Placa Predictor" Height="450" Width="800">
-    <Grid Margin="20">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
+        Title="Pico y Placa Predictor" Height="450" Width="800"
+        WindowStyle="None"
+        ResizeMode="NoResize"
+        WindowStartupLocation="CenterScreen"
+        Background="Transparent"
+        AllowsTransparency="True">
 
-       
-        <Grid Grid.Row="0" Margin="0 0 0 10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="License Plate:"/>
-            <TextBox Grid.Column="1" x:Name="LicensePlateTextBox" TextChanged="LicensePlateTextBox_TextChanged"/>
-        </Grid>
+    <Border CornerRadius="50">
+      
+        <Border CornerRadius="50"         
+            BorderThickness="2"
+            Opacity="0.90">
+        <Border.BorderBrush>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#462AD8" Offset="0"/>
+                <GradientStop Color="#DA34AE" Offset="0.75"/>
+                <GradientStop Color="#8A16C1" Offset="1"/>
+            </LinearGradientBrush>
+        </Border.BorderBrush>
+        <Border.Background>
+            <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
+                <GradientStop Color="#060531" Offset="0"/>
+                <GradientStop Color="#1B1448" Offset="0.75"/>
+            </LinearGradientBrush>
+        </Border.Background>
+
+            <Grid Margin="20">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="30"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="5"/>    
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock Grid.Column="0" FontSize="20" FontFamily="Consolas" FontWeight="Bold" Foreground="DarkGray" Text="Pico y Placa Predictor" VerticalAlignment="Center" Margin="10 0 0 0 "/>
+                    <Button x:Name="btnMinimize"
+                            Background="#28AEED"
+                            BorderThickness="0"
+                            Content="-"
+                            Foreground="White"
+                            FontSize="16"
+                            Grid.Column="1"
+                            Click="btnMinimize_Click">
+                    </Button>
+                    <Button x:Name="btnExit"
+        Background="#DA34AD"
+        BorderThickness="0"
+        Content="X"
+        Foreground="White"
+        FontSize="16"
+        Grid.Column="2"
+        Click="btnExit_Click">
+                    </Button>
+                </Grid>
+
+
+                <Grid Grid.Row="2" Margin="0 0 0 10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Content="License Plate:"/>
+                    <TextBox Grid.Column="1" x:Name="LicensePlateTextBox" TextChanged="LicensePlateTextBox_TextChanged"/>
+                </Grid>
+
+                <TextBlock Grid.Row="1" x:Name="LicensePlateError" Foreground="White" FontSize="12"/>
+
+                <Grid Grid.Row="3" Margin="0 0 0 10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Content="Date:"/>
+                    <DatePicker Grid.Column="1" x:Name="DatePicker" />
+                </Grid>
+
+                <TextBlock Grid.Row="4" x:Name="DateError" Foreground="White" FontSize="12"/>
+
+
+                <Grid Grid.Row="5" Margin="0 0 0 10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label Grid.Column="0" Content="Time:"/>
+                    <TextBox Grid.Column="1" x:Name="TimeTextBox" TextChanged="TimeTextBox_TextChanged"/>
+                </Grid>
+
+                <TextBlock Grid.Row="6" x:Name="TimeError" Foreground="White" FontSize="12"/>
+
+                <StackPanel Grid.Row="7" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
+                    <Button Content="Verify" Width="100" Click="VerifyButton_Click" />
+                    <Button Content="Clear" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
+                </StackPanel>
+
+                <TextBlock Grid.Row="8"
+   x:Name="ResultTextBlock"
+   FontSize="14"
+   FontWeight="Bold"
+   Text=""
+   HorizontalAlignment="Center"
+   Margin="0 10 0 0"/>
+
+            </Grid>
+
+        </Border>
+
+
         
-        <TextBlock Grid.Row="1" x:Name="LicensePlateError" Foreground="Red" FontSize="12"/>
-        
-        <Grid Grid.Row="2" Margin="0 0 0 10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Date:"/>
-            <DatePicker Grid.Column="1" x:Name="DatePicker" />
-        </Grid>
 
-        <TextBlock Grid.Row="3" x:Name="DateError" Foreground="Red" FontSize="12"/>
-
-
-        <Grid Grid.Row="4" Margin="0 0 0 10">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="80"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="Time:"/>
-            <TextBox Grid.Column="1" x:Name="TimeTextBox" TextChanged="TimeTextBox_TextChanged"/>
-        </Grid>
-
-        <TextBlock Grid.Row="5" x:Name="TimeError" Foreground="Red" FontSize="12"/>
-
-        <StackPanel Grid.Row="6" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
-            <Button Content="Verify" Width="100" Click="VerifyButton_Click" />
-            <Button Content="Clear" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
-        </StackPanel>
-
-        <TextBlock Grid.Row="7"
-           x:Name="ResultTextBlock"
-           FontSize="14"
-           FontWeight="Bold"
-           Text=""
-           HorizontalAlignment="Center"
-           Margin="0 10 0 0"/>
-
-    </Grid>
+    </Border>
 </Window>
