--- a/PicoYPlacaPredictor/MainWindow.xaml
+++ b/PicoYPlacaPredictor/MainWindow.xaml
@@ -49,11 +49,12 @@
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition />
                         <ColumnDefinition Width="25"/>
+                        <ColumnDefinition Width="5"/>
                         <ColumnDefinition Width="25"/>
                         <ColumnDefinition Width="5"/>    
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0" FontSize="20" FontFamily="Consolas" FontWeight="Bold" Foreground="DarkGray" Text="Pico y Placa Predictor" VerticalAlignment="Center" Margin="10 0 0 0 "/>
+                    <TextBlock Grid.Column="0" FontSize="20" FontFamily="Consolas" FontWeight="Bold" Foreground="White" Text="Pico y Placa Predictor" VerticalAlignment="Center" Margin="10 0 0 0 "/>
                     <Button x:Name="btnMinimize"
                             Background="#28AEED"
                             BorderThickness="0"
@@ -69,7 +70,7 @@
         Content="X"
         Foreground="White"
         FontSize="16"
-        Grid.Column="2"
+        Grid.Column="3"
         Click="btnExit_Click">
                     </Button>
                 </Grid>
@@ -77,44 +78,44 @@
 
                 <Grid Grid.Row="2" Margin="0 0 0 10">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="License Plate:"/>
+                    <Label Grid.Column="0" Content="License Plate:" FontFamily="Consolas" Foreground="White" HorizontalAlignment="Right"/>
                     <TextBox Grid.Column="1" x:Name="LicensePlateTextBox" TextChanged="LicensePlateTextBox_TextChanged"/>
                 </Grid>
 
-                <TextBlock Grid.Row="1" x:Name="LicensePlateError" Foreground="White" FontSize="12"/>
+                <TextBlock Grid.Row="3" x:Name="LicensePlateError" Foreground="White" FontSize="12"/>
 
-                <Grid Grid.Row="3" Margin="0 0 0 10">
+                <Grid Grid.Row="4" Margin="0 0 0 10">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="Date:"/>
+                    <Label Grid.Column="0" Content="Date:" FontFamily="Consolas"  Foreground="White" HorizontalAlignment="Right"/>
                     <DatePicker Grid.Column="1" x:Name="DatePicker" />
                 </Grid>
 
-                <TextBlock Grid.Row="4" x:Name="DateError" Foreground="White" FontSize="12"/>
+                <TextBlock Grid.Row="5" x:Name="DateError" Foreground="White" FontSize="12" />
 
 
-                <Grid Grid.Row="5" Margin="0 0 0 10">
+                <Grid Grid.Row="6" Margin="0 0 0 10">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="80"/>
+                        <ColumnDefinition Width="120"/>
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0" Content="Time:"/>
+                    <Label Grid.Column="0" Content="Time:" FontFamily="Consolas" Foreground="White" HorizontalAlignment="Right"/>
                     <TextBox Grid.Column="1" x:Name="TimeTextBox" TextChanged="TimeTextBox_TextChanged"/>
                 </Grid>
 
-                <TextBlock Grid.Row="6" x:Name="TimeError" Foreground="White" FontSize="12"/>
+                <TextBlock Grid.Row="7" x:Name="TimeError" Foreground="White" FontSize="12"/>
 
-                <StackPanel Grid.Row="7" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
+                <StackPanel Grid.Row="8" Orientation="Horizontal" Margin="0 10 0 0" HorizontalAlignment="Center">
                     <Button Content="Verify" Width="100" Click="VerifyButton_Click" />
                     <Button Content="Clear" Width="100" Margin="10 0 0 0" Click="ClearButton_Click"/>
                 </StackPanel>
 
-                <TextBlock Grid.Row="8"
+                <TextBlock Grid.Row="9"
    x:Name="ResultTextBlock"
    FontSize="14"
    FontWeight="Bold"
